Archived old configuration files

--- a/examples/simulation/virus.conf
+++ b/examples/simulation/virus.conf
@@ -27,24 +27,24 @@ pulse_energy_spread = 0.2E-03
 
 # Pulse profile either None, top_hat, gaussian, pseudo_lorentzian
 profile_model = None
-#profile_model = pseudo_lorentzian
 
 [sample]
 
 number_of_images = 1
 number_of_particles = 1.
 number_of_particles_variation = None
-#number_of_particles_variation = poisson
 
 [particle]
 
 position = [0.,0.,0.]
 position_variation = uniform
-position_spread = [1000E-9,1000E-9,1000E-9]
+position_spread = [1000E-9,1000E-9,0]
 
 # Particle species can be set to uniform_sphere, uniform_spheoid or map3d
-particle_model = uniform_sphere
-#geometry = icosahedron
+particle_model = map3d
+
+# If particle_model is map3d, geometry can be set to 'icosahedron', 'cube', 'sphere', 'spheroid' or 'custom'
+geometry = icosahedron
 
 # Material type can be set to 'none', 'protein','virus','cell','latexball','water' or 'custom'
 material_type = virus
@@ -69,19 +69,15 @@ Nx = 414
 Ny = 414
 
 # load external mask
-#mask_filename = mask_cxic9714.h5
-#mask_dataset = data/data
+#mask_filename = ...
+#mask_dataset  = ...
 #mask_is_cxi_bitmask = False
 
 x_gap_size_in_pixel = 30
 hole_diameter_in_pixel = 115
-#cx_hole = 197
-#cy_hole = 187
 
 # Center position in pixel (pixel (0,0) has its center at x=0.0 y=0.0)
 # Make sure that border pixel is not existing twice! Center should be lying on a pixel
-#cx = 197
-#cy = 187
 cx = middle
 cy = middle
 
@@ -94,8 +90,8 @@ center_spread_limit = 10
 noise = normal_poisson
 noise_spread = 0.1
 #noise = file_poisson
-#noise_filename = /Users/hantke/src/condor/tests/misses_r0121.h5
-#noise_dataset = data_photons_2x2
+#noise_filename = ...
+#noise_dataset  = ...
 
 # saturation level [ph/pixel]
 saturation_level = 4000
