--- a/examples/sizing/virus.conf
+++ b/examples/sizing/virus.conf
@@ -66,16 +66,19 @@ distance = 2.16
 pixel_size = 110E-06
 
 # absolute number of pixels in x/y direction
-Nx = 414
-Ny = 414
+#Nx = 414
+#Ny = 414
+Nx = 388
+Ny = 370
+
 
 # load external mask
 #mask_filename = ...
 #mask_dataset  = ...
 #mask_is_cxi_bitmask = False
 
-x_gap_size_in_pixel = 30
-hole_diameter_in_pixel = 115
+#x_gap_size_in_pixel = 30
+#hole_diameter_in_pixel = 115
 
 # Center position in pixel (pixel (0,0) has its center at x=0.0 y=0.0)
 # Make sure that border pixel is not existing twice! Center should be lying on a pixel
