--- a/examples/sizing/virus.conf
+++ b/examples/sizing/virus.conf
@@ -34,18 +34,16 @@ number_of_images = 1
 number_of_particles = 1.
 number_of_particles_variation = None
 
-[particle]
+[particle_1]
+
+concentration = 1.0
 
 position = [0.,0.,0.]
 position_variation = uniform
 position_spread = [1000E-9,1000E-9,0]
 
 # Particle species can be set to uniform_sphere, uniform_spheoid or map3d
-#particle_model = map3d
 particle_model = uniform_sphere
-
-# If particle_model is map3d, geometry can be set to 'icosahedron', 'cube', 'sphere', 'spheroid' or 'custom'
-#geometry = icosahedron
 
 # Material type can be set to 'none', 'protein','virus','cell','latexball','water' or 'custom'
 material_type = virus
@@ -56,6 +54,60 @@ diameter = 60.0E-09
 # Diameter spread [m]
 diameter_spread = 10E-09
 diameter_variation = normal
+
+[particle_2]
+
+concentration = 1.0
+
+position = [0.,0.,0.]
+position_variation = uniform
+position_spread = [1000E-9,1000E-9,0]
+
+# Particle species can be set to uniform_sphere, uniform_spheoid or map3d
+particle_model = uniform_spheroid
+
+flattening = 0.75
+flattening_variation = normal
+flattening_spread = 0.5
+
+# Material type can be set to 'none', 'protein','virus','cell','latexball','water' or 'custom'
+material_type = virus
+
+# Sample size [m]
+diameter = 60.0E-09
+
+# Diameter spread [m]
+diameter_spread = 10E-09
+diameter_variation = normal
+
+alignment = random
+
+[particle_3]
+
+concentration = 1.
+
+position = [0.,0.,0.]
+position_variation = uniform
+position_spread = [1000E-9,1000E-9,0]
+
+# Particle species can be set to uniform_sphere, uniform_spheoid or map3d
+particle_model = map3d
+#particle_model = uniform_sphere
+
+# If particle_model is map3d, geometry can be set to 'icosahedron', 'cube', 'sphere', 'spheroid' or 'custom'
+geometry = icosahedron
+
+# Material type can be set to 'none', 'protein','virus','cell','latexball','water' or 'custom'
+material_type = virus
+
+# Sample size [m]
+diameter = 60.0E-09
+
+# Diameter spread [m]
+diameter_spread = 10E-09
+diameter_variation = normal
+
+alignment = random
 
 [detector]
 
