sphericity parameter implemented. Does not seem to work.

--- a/examples/sizing_radial/virus.conf
+++ b/examples/sizing_radial/virus.conf
@@ -67,7 +67,7 @@ position_spread = [1000E-9,1000E-9,0]
 particle_model = uniform_spheroid
 
 flattening = 0.75
-flattening_variation = normal
+flattening_variation = uniform
 flattening_spread = 0.5
 
 # Material type can be set to 'none', 'protein','virus','cell','latexball','water' or 'custom'
